--- a/sicongliu.html
+++ b/sicongliu.html
@@ -7,7 +7,7 @@
     <meta name="Description" content="blog"/>
     <title>Simple</title>
     <link rel="shortcut icon" href="/static/favicon.png"/>
-    <link rel="stylesheet" type="text/css" href="/main.css" />
+    <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
 <body>
 <div class="main">
