--- a/sicongliu.html
+++ b/sicongliu.html
@@ -129,9 +129,6 @@
 <br>
 <br>
     <div id="disqus_thread"></div>
-	<div class="footer">
-		<p>© Copyright 2014 by isnowfy, Designed by isnowfy</p>
-	</div>
 </div>
 <script src="main.js"></script>
 <script id="content" type="text/mustache">
@@ -193,5 +190,9 @@ $(document).ready(function() {
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ["\\(", "\\)"]], processEscapes: true}});
 </script>
+<div id="footer">
+	Last updatd 02/2017 | copyright &copy; <b>Sicong Liu</b>.
+</div>
+
 </body>
 </html>
