--- a/sicongliu.html
+++ b/sicongliu.html
@@ -124,11 +124,23 @@
 <p>* 潘长勇，任飞，<b>刘思聪</b>，李嘉，杨昉，张超，宋健；基于非对等保护的混合自动请求重传方法；中国发明专利，201210238146.0；已授权。</p>
 
 <p>杨昉，<b>刘思聪</b>，宋健，潘长勇;基于先验信息辅助的压缩感知窄带干扰估计方法及装置;发明专利，201310395712.3；已授权。</p>
+
+
+
+
 <!-- content end -->
+	<div class="footer">
+		Last updatd 02/2017 | copyright &copy; <b>Sicong Liu</b>.
+	</div>
 </div>
+
+
+
+
 <br>
 <br>
     <div id="disqus_thread"></div>
+
 </div>
 <script src="main.js"></script>
 <script id="content" type="text/mustache">
@@ -190,9 +202,6 @@ $(document).ready(function() {
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ["\\(", "\\)"]], processEscapes: true}});
 </script>
-<div id="footer">
-	Last updatd 02/2017 | copyright &copy; <b>Sicong Liu</b>.
-</div>
 
 </body>
 </html>
