--- a/sicongliu.html
+++ b/sicongliu.html
@@ -11,14 +11,15 @@
 </head>
 <body>
 <div class="main">
+	<!--
     <div class="header">
     	<ul id="pages">
-:i
-            <li><a href="/">home</a></li>
-            <li><a href="/#/tags">tags</a></li>
-            <li><a href="/#/archive">archive</a></li>
+            <li><a href="/">Biography</a></li>
+            <li><a href="/#/tags">Honors and Awards</a></li>
+            <li><a href="/#/archive">Selected Publications</a></li>
     	</ul>
     </div>
+	-->
 	<div class="wrap-header">
 	<h1>
     <a href="/" id="title"></a>
