--- a/sicongliu.html
+++ b/sicongliu.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="main">
-	<!--
+<!--
     <div class="header">
     	<ul id="pages">
             <li><a href="/">Biography</a></li>
@@ -19,12 +19,13 @@
             <li><a href="/#/archive">Selected Publications</a></li>
     	</ul>
     </div>
-	-->
 	<div class="wrap-header">
 	<h1>
     <a href="/" id="title"></a>
 	</h1>
 	</div>
+-->
+
 <div id="md" style="display: none;">
 <!-- markdown -->
 
@@ -38,18 +39,21 @@
 						<img src="images/head.jpg" width = 150 alt="Figure 1" />
 						
 					</div>
-					<h2>Sicong Liu (劉思聰)</h2>
-					<p>Ph.D. Candidate, Tsinghua University</p>
-					<p>Department of Electronic Engineering</p>
-					<p>Address: Room 1-413, FIT Building, Tsinghua Univ.</p>
-					<p>E-mail: liu-sc12@mails.tsinghua.edu.cn</p>
+					<h2>Dr. Sicong Liu (劉思聰)</h2>
+					<p>Ph.D, Tsinghua University</p>
+					<p>Senior Research Engineer</p>
+					<p>Research Dept. Network Technologies, Huawei Co. Ltd</p>
+					<p>Address: Shenzhen, China P.R.</p>
+					<p>E-mail: liusc1028 at gmail dot com / liusc1028 at icloud dot com</p>
 					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;liusc1028@163.com</p>
 					<br><br>
 				</div>
 			</div>
 
 			<h3>News</h3>
+<!--
 			<p>* Congratulations to my supervisor, <a target="blank" href="http://dtv.ee.tsinghua.edu.cn/indexe.htm">Prof. Jian Song</a>, who has been elevated to the Class of 2016 <b>IEEE Fellow</b>.</p>
+-->
 		
 
 <!--			
@@ -57,16 +61,15 @@
 			<div class="summary">Lorem ipsum dolor sit amet nullam dignissim</div>
 -->
 
-			<h3>Biography</h3>
-
-			<p><b>Sicong Liu</b> studied in Tsinghua University from August, 2008 to July, 2012. He received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China. Currently, he is pursuing the Ph.D. degree, supervised by <a target="blank" href="http://dtv.ee.tsinghua.edu.cn/indexe.htm">Prof. Jian Song</a>, in electronic engineering in Tsinghua University.
-   Sicong Liu has published 15 jounal papers and 14 conference papers. He owns 6 Chinese invention patents. He is one of the core members that draft the Broadband Power Line Communications Standard in China. He received the National Scholarship Award for Graduates in both 2014 and 2016, and won the Best Oral Paper Award of the National Doctoral Student Academic Conference. He is the reviewer of IEEE Transactions on Signal Processing, IEEE Transactions on Communications, IEEE Transactions on Broadcasting, IEEE Transactions on Vehicular Technology and IEEE Transactions on Power Delivery. He is a student member of IEEE.</p>
-
-<p>His research interests lie in sparse signal processing, compressed sensing (CS), interference mitigation, resource allocation, optimization and their applications in the field of smart grid communications, multimedia broadcasting systems as well as the power line communication (PLC) and visible light communication (VLC). Specifically, he mainly focuses on the applications of PLC on smart grid and the integration of PLC and VLC for broadband multimedia access. Besides, he has done plenty of research on the non-Gaussian narrowband interference and impulsive noise recovery and cancellation in broadband transmission systems.</p>
+<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012, and the PhD degree,  supervised by <a target="blank" href="http://dtv.ee.tsinghua.edu.cn/indexe.htm">Prof. Jian Song</a>, in electronic engineering in Tsinghua University in 2017 with the highest honor. Currently he is working as a senior research engineer in Huawei Technologies Co. Ltd.</p>
+			   
+<p>Sicong Liu has published over 35 journal and conference research papers. He owns 7 Chinese invention patents. He is one of the core members that draft the Broadband Power Line Communications Standard in China. He has won the National Graduate Fellowship Award  twice in 2014 and 2016, the Excellent  Doctoral Dissertation Award, the Outstanding PhD Graduate Award, and the Best Oral Paper Award for the National Doctoral Academic Conference. He is a reviewer of IEEE Transactions on Signal Processing, IEEE Transactions on Communications, IEEE Transactions on Broadcasting, IEEE Transactions on Vehicular Technology and IEEE Transactions on Power Delivery. He is a member of IEEE.</p>
+<p>His research interests lie in sparse signal processing, interference mitigation, cross-layer resource allocation and optimization, 5G emerging technologies, and their applications in the field of wireless communications, broadband multimedia transmission, smart grid communications, and power line and visible light communications. </p>
 
 			<h3>Education Background</h3>
-			<p><b>Aug.2012-Present</b> &nbsp;&nbsp;&nbsp;Ph.D. Candidate, Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
-			<p><b>Aug.2010-Jan.2011</b> &nbsp;Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
+			<p><b>Jul.2017-Present</b> Senior Research Engineer, Research Dept. Network Technologies, Huawei Co. Ltd</p>
+			<p><b>Aug.2012-Jul.2017</b> &nbsp;&nbsp;&nbsp;Ph.D., Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
+			<p><b>Aug.2010-Jan.2011</b> &nbsp;Visiting Scholar, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
 			<p><b>Aug.2008-Jul.2012</b> &nbsp;Bachelor, Department of Electronic Engineering, Tsinghua University</p>
 
 
@@ -144,6 +147,7 @@
 
 </div>
 <script src="main.js"></script>
+<!--
 <script id="content" type="text/mustache">
     <h1>{{title}}</h1>
     <div class="tag">
@@ -153,6 +157,7 @@
     {{/tags}}
     </div>
 </script>
+-->
 <script id="pagesTemplate" type="text/mustache">
     {{#pages}}
     <li>
