--- a/sicongliu.html
+++ b/sicongliu.html
@@ -45,13 +45,12 @@
 					<p>Research Dept. Network Technologies, Huawei Co. Ltd</p>
 					<p>Address: Shenzhen, China P.R.</p>
 					<p>E-mail: liusc1028 at gmail dot com / liusc1028 at icloud dot com</p>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;liusc1028@163.com</p>
-					<br><br>
+									<br><br>
 				</div>
 			</div>
 
-			<h3>News</h3>
-<!--
+<!--<h3>News</h3>
+
 			<p>* Congratulations to my supervisor, <a target="blank" href="http://dtv.ee.tsinghua.edu.cn/indexe.htm">Prof. Jian Song</a>, who has been elevated to the Class of 2016 <b>IEEE Fellow</b>.</p>
 -->
 		
@@ -66,9 +65,9 @@
 <p>Sicong Liu has published over 35 journal and conference research papers. He owns 7 Chinese invention patents. He is one of the core members that draft the Broadband Power Line Communications Standard in China. He has won the National Graduate Fellowship Award  twice in 2014 and 2016, the Excellent  Doctoral Dissertation Award, the Outstanding PhD Graduate Award, and the Best Oral Paper Award for the National Doctoral Academic Conference. He is a reviewer of IEEE Transactions on Signal Processing, IEEE Transactions on Communications, IEEE Transactions on Broadcasting, IEEE Transactions on Vehicular Technology and IEEE Transactions on Power Delivery. He is a member of IEEE.</p>
 <p>His research interests lie in sparse signal processing, interference mitigation, cross-layer resource allocation and optimization, 5G emerging technologies, and their applications in the field of wireless communications, broadband multimedia transmission, smart grid communications, and power line and visible light communications. </p>
 
-			<h3>Education Background</h3>
-			<p><b>Jul.2017-Present</b> Senior Research Engineer, Research Dept. Network Technologies, Huawei Co. Ltd</p>
-			<p><b>Aug.2012-Jul.2017</b> &nbsp;&nbsp;&nbsp;Ph.D., Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
+			<h3>Education and Research Experiences</h3>
+			<p><b>Jul.2017-Present</b> &nbsp;&nbsp; Senior Research Engineer, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
+			<p><b>Aug.2012-Jul.2017</b> &nbsp;&nbsp;Ph.D., Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
 			<p><b>Aug.2010-Jan.2011</b> &nbsp;Visiting Scholar, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
 			<p><b>Aug.2008-Jul.2012</b> &nbsp;Bachelor, Department of Electronic Engineering, Tsinghua University</p>
 
@@ -133,6 +132,9 @@
 
 
 <!-- content end -->
+<br>
+<br>
+<h3></h3>
 	<div class="footer">
 		Last updatd 02/2017 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
