--- a/sicongliu.html
+++ b/sicongliu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="Keywords" content="blog"/>
     <meta name="Description" content="blog"/>
-    <title>Simple</title>
+    <title>Sicong Liu</title>
     <link rel="shortcut icon" href="/static/favicon.png"/>
     <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
@@ -59,7 +59,7 @@
 			<div class="divider"></div>
 			<div class="summary">Lorem ipsum dolor sit amet nullam dignissim</div>
 -->
-
+<h3></h3>
 <p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012, and the PhD degree,  supervised by <a target="blank" href="http://dtv.ee.tsinghua.edu.cn/indexe.htm">Prof. Jian Song</a>, in electronic engineering in Tsinghua University in 2017 with the highest honor. Currently he is working as a senior research engineer in Huawei Technologies Co. Ltd.</p>
 			   
 <p>Sicong Liu has published over 35 journal and conference research papers. He owns 7 Chinese invention patents. He is one of the core members that draft the Broadband Power Line Communications Standard in China. He has won the National Graduate Fellowship Award  twice in 2014 and 2016, the Excellent  Doctoral Dissertation Award, the Outstanding PhD Graduate Award, and the Best Oral Paper Award for the National Doctoral Academic Conference. He is a reviewer of IEEE Transactions on Signal Processing, IEEE Transactions on Communications, IEEE Transactions on Broadcasting, IEEE Transactions on Vehicular Technology and IEEE Transactions on Power Delivery. He is a member of IEEE.</p>
