--- a/sicongliu.html
+++ b/sicongliu.html
@@ -136,7 +136,7 @@
 <br>
 <h3></h3>
 	<div class="footer">
-		Last updatd 02/2017 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Sep. 2017 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
