--- a/sicongliu.html
+++ b/sicongliu.html
@@ -79,7 +79,7 @@
 <p>&bull; <b>Sicong Liu</b>, Fang Yang,  Xianbin Wang, Jian Song, Zhu Han, "<a target="blank" href="http://ieeexplore.ieee.org/document/7833213/">Structured-Compressed-Sensing-Based Impulsive Noise Cancellation for MIMO Systems</a>," accepted by <i>IEEE Transactions on Vehicular Technology</i>, Jan. 2017.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, Xianbin Wang, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/document/7373681/">Two Dimensional Structured Compressed Sensing Based NBI Cancellation Exploiting Spatial and Temporal Correlations in MIMO Systems</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 11, pp. 9020-9028, Nov. 2016.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Wenbo Ding, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7163620">Double Kill: Compressive Sensing Based Narrowband Interference and Impulsive Noise Mitigation for Vehicular Communications</a>," <i>IEEE Transactions on Vehicular Technology</i>, vol. 65, no. 7, pp. 5099-5109, July 2016.</p>
-<p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6998816&amp;newsearch=true&amp;queryText=Narrowband%20Interference%20Cancellation%20Based%20on%20Priori%20Aided%20Compressive%20Sensing%20for%20DTMB%20Systems">Narrowband Interference Cancellation Based on Priori Aided Compressive Sensing for DTMB Systems</a>,” <i>IEEE Transactions on Broadcasting<i>, vol.61, no.1, pp.66-74, March 2015.</p>
+<p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6998816&amp;newsearch=true&amp;queryText=Narrowband%20Interference%20Cancellation%20Based%20on%20Priori%20Aided%20Compressive%20Sensing%20for%20DTMB%20Systems">Narrowband Interference Cancellation Based on Priori Aided Compressive Sensing for DTMB Systems</a>,” <i>IEEE Transactions on Broadcasting</i>, vol.61, no.1, pp.66-74, March 2015.</p>
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6937195&amp;newsearch=true&amp;queryText=An%20Optimal%20Interleaving%20Scheme%20with%20Maximum%20Time-Frequency%20Diversity%20for%20PLC%20Systems">An Optimal Interleaving Scheme with Maximum Time-Frequency Diversity for PLC Systems</a>,” <i>IEEE Transactions on Power Delivery</i>, vol. 31, no. 3, pp. 1007-1014, June 2016.</p>
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang,  Wenbo Ding, Jian Song, and Andrea M. Tonello, "<a target="blank" href="http://ieeexplore.ieee.org/document/7931965/">Structured Compressed Sensing Based Narrowband Interference Elimination for In-Home Power Line Communications</a>," accepted by <i>IEEE Transactions on Consumer Electronics</i>, vol. 63, no. 1, pp. 10-18, Feb. 2017.</p>
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang, Chao Zhang, Jian Song, "<a target="blank" href="http://search.ieice.org/bin/summary.php?id=e98-a_3_870&amp;year=2015">Narrowband interference mitigation based on compressive sensing for OFDM systems</a>”, <i>IEICE Transactions on Fundamentals</i>, vol. E98-A, no. 3, pp. 870–873, March 2015.</p>
@@ -126,11 +126,9 @@
 <p>&bull; National Undergraduate Endeavour Scholarship</p>
 <p>&bull; Tsinghua Second-class Scholarship for Freshmen</p>
 
-
+<!--
 <h3>Patents</h3>
 <p>&bull; 杨昉，<b>刘思聪</b>，宋健，阳辉，牛志升；用于正交频分复用通信的交织方法及装置；中国发明专利，201310153729.8；已授权。</p>
-
-<p>&bull; 潘长勇，任飞，<b>刘思聪</b>，李嘉，杨昉，张超，宋健；基于非对等保护的混合自动请求重传方法；中国发明专利，201210238146.0；已授权。</p>
 
 <p>&bull;杨昉，<b>刘思聪</b>，宋健，潘长勇;基于先验信息辅助的压缩感知窄带干扰估计方法及装置;发明专利，201310395712.3；已授权。</p>
 
@@ -138,7 +136,12 @@
 
 <p>&bull;杨昉，<b>刘思聪</b>，宋健，彭克武;电力线通信系统中基于 OFDM 的多频组网方法及装置；发明专利，201310395712.3；已授权。</p>
 
+<p>&bull; 潘长勇，任飞，<b>刘思聪</b>，李嘉，杨昉，张超，宋健；基于非对等保护的混合自动请求重传方法；中国发明专利，201210238146.0；已授权。</p>
 
+<p>&bull;杨昉，<b>刘思聪</b>，张超，宋健，王劲涛; 一种基于压缩感知的冲激噪声估计与消除方法及装置；发明专利，201410140839.5；已授权。</p>
+
+<p>&bull;杨昉，<b>刘思聪</b>，宋健，潘长勇; 一种基于压缩感知的窄带干扰估计和消除方法及装置；发明专利，201410006974.0；已授权。</p>
+-->
 
 
 <!-- content end -->
