--- a/sicongliu.html
+++ b/sicongliu.html
@@ -60,9 +60,9 @@
 			<div class="summary">Lorem ipsum dolor sit amet nullam dignissim</div>
 -->
 <h3></h3>
-<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012, and the PhD degree,  supervised by <a target="blank" href="http://dtv.ee.tsinghua.edu.cn/indexe.htm">Prof. Jian Song</a>, in electronic engineering in Tsinghua University in 2017 with the highest honor. Currently he is working as a senior research engineer in Huawei Technologies Co. Ltd.</p>
+<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012, and the PhD degree,  supervised by <a target="blank" href="http://dtv.ee.tsinghua.edu.cn/indexe.htm">Prof. Jian Song</a>, in electronic engineering in Tsinghua University in 2017 with the highest honor. From 2010 to 2011, he was a visiting scholar in Dept. Electronic and Communications Engineering, City University of Hong Kong. Currently he is a senior research engineer in Research Dept. Network Technologies, Huawei Technologies Co. Ltd.</p>
 			   
-<p>Sicong Liu has published over 35 journal and conference research papers. He owns 7 Chinese invention patents. He is one of the core members that draft the Broadband Power Line Communications Standard in China. He has won the National Graduate Fellowship Award  twice in 2014 and 2016, the Excellent  Doctoral Dissertation Award, and the Outstanding PhD Graduate Award. He is a reviewer of IEEE Transactions on Signal Processing, IEEE Transactions on Communications, IEEE Transactions on Broadcasting, IEEE Transactions on Vehicular Technology and IEEE Transactions on Power Delivery. He is a member of IEEE.</p>
+<p>Sicong Liu has published over 35 journal and conference research papers. He owns 7 Chinese invention patents. He is one of the core members that draft the Broadband Power Line Communications Standard in China. He has won the National Graduate Fellowship Award twice in 2014 and 2016, the Excellent Doctoral Dissertation Award of Tsinghua University, the Outstanding PhD Graduate Award of Tsinghua University, and the Outstanding Graduate Award of Beijing City. He is a reviewer of IEEE Transactions on Signal Processing, IEEE Transactions on Communications, IEEE Transactions on Broadcasting, IEEE Transactions on Vehicular Technology and IEEE Transactions on Power Delivery. He is on the Guest Editorial Board of the Future Internet Journal Special Issue on Massive MIMO Communication and Networking Systems. He served as a Technical Program Committee Member of International Telecommunication Networks and Applications Conference (ITNAC) 2017 and Data Intensive Computing and Communications (DICC) 2017. He is a member of IEEE.</p>
 <p>His research interests lie in sparse signal processing, interference mitigation, cross-layer resource allocation and optimization, 5G emerging technologies, and their applications in the field of wireless communications, broadband multimedia transmission, smart grid communications, and power line and visible light communications. </p>
 
 			<h3>Education and Research Experiences</h3>
@@ -83,6 +83,9 @@
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6937195&amp;newsearch=true&amp;queryText=An%20Optimal%20Interleaving%20Scheme%20with%20Maximum%20Time-Frequency%20Diversity%20for%20PLC%20Systems">An Optimal Interleaving Scheme with Maximum Time-Frequency Diversity for PLC Systems</a>,” <i>IEEE Transactions on Power Delivery</i>, vol. 31, no. 3, pp. 1007-1014, June 2016.</p>
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang,  Wenbo Ding, Jian Song, and Andrea M. Tonello, "<a target="blank" href="http://ieeexplore.ieee.org/document/7931965/">Structured Compressed Sensing Based Narrowband Interference Elimination for In-Home Power Line Communications</a>," accepted by <i>IEEE Transactions on Consumer Electronics</i>, vol. 63, no. 1, pp. 10-18, Feb. 2017.</p>
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang, Chao Zhang, Jian Song, "<a target="blank" href="http://search.ieice.org/bin/summary.php?id=e98-a_3_870&amp;year=2015">Narrowband interference mitigation based on compressive sensing for OFDM systems</a>”, <i>IEICE Transactions on Fundamentals</i>, vol. E98-A, no. 3, pp. 870–873, March 2015.</p>
+
+		<p>&bull; Tengjiao Wang, <b>Sicong Liu</b>, Fang Yang, Jintao Wang, Jian Song, “<a target="blank" href="http://ieeexplore.ieee.org/document/8057263/">Generalized Spatial Modulation Based Multi-User and Signal Detection Scheme for Terrestrial Return Channel with NOMA</a>”, accepted by <i>IEEE Transactions on Broadcasting</i>, Aug. 2017.
+
 		<p>&bull; Wenbo Ding, Fang Yang, <b>Sicong Liu</b>, Xianbin Wang, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7175052">Non-Orthogonal Time-Frequency Training Sequence Based CSI Acquisition for MIMO Systems</a>," <i>IEEE Transactions on Vehicular Technologies</i>, vol. 65, no. 7, pp. 5714-5719, July 2016.</p>
 		<p>&bull; Wenbo Ding, Fang Yang, <b>Sicong Liu</b>, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7225354">Approach to suppress out-of-band emission for dual pseudo noise padded time-domain synchronous-orthogonal frequency division multiplexing systems</a>," <i>IET Communications</i>, vol. 9, no. 13, pp. 1606-1614, Sep. 2015.</p>
 		<p>&bull; Fang Yang, Junnan Gao and <b>Sicong Liu</b>, "Novel Visible Light Communication Approach Based on Hybrid OOK and ACO-OFDM," <i>IEEE Photonics Technology Letters</i>, vol. 28, no. 14, pp. 1585-1588, July15, 15 2016.</p>
@@ -103,6 +106,10 @@
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Chao Zhang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7037263&amp;newsearch=true&amp;queryText=Compressive%20Sensing%20Based%20Narrowband%20Interference%20Cancellation%20for%20Power%20Line%20Communication%20Systems">Compressive Sensing Based Narrowband Interference Cancellation for Power Line Communication Systems</a>”, to be published in <i>Proc. IEEE Global Communications Conference (Globecom)</i>, Austin, USA, Dec. 2014.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, Fei Ren, Jia Li, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6525859&amp;newsearch=true&amp;queryText=OFDM%20preamble%20design%20for%20synchronization%20under%20narrowband%20interference">OFDM preamble design for synchronization under narrowband interference</a>”, in <i>Proc. IEEE International Symposium on Power Line Communications (ISPLC)</i>, Johannesburg, South Africa, Mar. 2013, pp. 252-257.</p>
 <p>&bull; Jian Song, <b>Sicong Liu</b>, Guangxin Zhou, Bingyan Yu, Wenbo Ding, Fang Yang, Hongming Zhang, Xun Zhang, Amara Amara, "A cost-effective approach for ubiquitous broadband access based on hybrid PLC-VLC system", in <i>Proc. 2016 IEEE International Symposium on Circuits and Systems (ISCAS)</i>, Montreal, QC, May 2016, pp. 2815-2818(<b>invited paper</b>).
+
+<p>&bull; Tengjiao Wang, <b>Sicong Liu</b>, Fang Yang, Jintao Wang, Jian Song, Zhu Han, “Block-SparseCompressiveSensingBased Multi-User and Signal Detection for Generalized Spatial Modulation in NOMA”, accepted by <i>Proc. Wireless Communications and Mobile Computing 2017 (IWCMC’17)</i>, Valencia, Spain, 2017.
+
+
 <p>&bull; Wenbo Ding, Fang Yang, <b>Sicong Liu</b>, and Jian Song, “Spectrally Efficient CSI Acquisition Approach For Large-Scale MIMO Systems,” in <i>Proc. IEEE Globecom 2015</i>, San Diego, USA.</p>
 <p>&bull; Junnan Gao, Fang Yang, <b>Sicong Liu</b>, "Hybrid Multi- and Single-Carrier Modulation Approach for Visible Light Communication", in <i> Proc. IEEE International Conference on Communications (ICC'17)</i>, May 2017.</p>
 <p>&bull; Fang Yang, Junnan Gao, <b>Sicong Liu</b>, "Clipping Noise Cancellation for OFDM systems Based on Priori Aided Compressed Sensing",  in <i>Proc. IEEE International Symposium on Broadband Multimedia Systems and Broadcasting (BMSB), Nara, 2016</i>, pp. 1-4.</p>
@@ -112,19 +119,19 @@
 			<!--<p>&bull; 刘思聪，杨昉，宋健，李建岐，刘伟麟；基于压缩感知的窄带干扰重构与消除；电视技术，2014(19), pp.128-130.</p>-->
 
 <h3>Honors and Awards</h3>
-<p>&bull; Excellent Doctoral Dissertation Award of Tsinghua University, 2017 </p>
-<p>&bull; Excellent PhD Graduate Award of Tsinghua University, 2017 </p>
-<p>&bull; Excellent PhD Graduate Award of Beijing City, 2017 </p>
+<p>&bull; Outstanding Doctoral Dissertation Award of Tsinghua University, 2017 </p>
+<p>&bull; Outstanding PhD Graduate Award of Tsinghua University, 2017 </p>
+<p>&bull; Outstanding Graduate Award of Beijing City, 2017 </p>
 <p>&bull; "Academic Rising-Star" in Department of EE, Tsinghua University, 2016 </p>
 <p>&bull; National Graduate Scholarship, 2016</p>
-<p>&bull; The Tsinghua Excellent Graduate Students Support Project and Tang Lixin Scholarship, 2015</p>
+<p>&bull; The Tsinghua Excellent Graduate Students Support Project and Tang-Lixin Scholarship, 2015</p>
 <p>&bull; National Graduate Scholarship, 2014</p>
-<p>&bull; Excellent Graduate in Tsinghua, 2012</p>
-<p>&bull; The Excellent Student Scholarship in THU (TWICE)</p>
-<p>&bull; Outstanding Exchange Scholarship in City University of Hong Kong</p>
+<p>&bull; Excellent Undergraduate Award in Tsinghua, 2012</p>
+<p>&bull; Excellent Visiting Fellowship in City University of Hong Kong</p>
+<p>&bull; The Excellent Student Scholarship in THU (Twice)</p>
 <p>&bull; 1st Prize of the Beijing Undergraduate Physics Olympic Competition</p>
-<p>&bull; National Undergraduate Endeavour Scholarship</p>
-<p>&bull; Tsinghua Second-class Scholarship for Freshmen</p>
+<!--<p>&bull; National Undergraduate Endeavour Scholarship</p>-->
+<!--<p>&bull; Tsinghua Second-Class Scholarship for Freshmen</p>-->
 
 <!--
 <h3>Patents</h3>
