--- a/sicongliu.html
+++ b/sicongliu.html
@@ -41,10 +41,10 @@
 					</div>
 					<h2>Dr. Sicong Liu (劉思聰)</h2>
 					<p>PhD, Tsinghua University</p>
-					<p>Senior Research Engineer</p>
-					<p>Research Dept. Network Technologies, Huawei Co. Ltd</p>
-					<p>Address: Nanshan District, Shenzhen 518057, China P.R.</p>
-					<p>E-mail: liusc1028 at gmail dot com / liusc1028 at icloud dot com</p>
+					<p>Assistant Professor</p>
+					<p>School of Information Science and Technology, Xiamen University</p>
+					<p>Address: Xiamen University, Xiamen 361005, China P.R.</p>
+					<p>E-mail: liusc at xmu dot edu dot cn/ liusc1028 at gmail dot com</p>
 									<br><br>
 				</div>
 			</div>
@@ -60,13 +60,14 @@
 			<div class="summary">Lorem ipsum dolor sit amet nullam dignissim</div>
 -->
 <h3></h3>
-<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012, and the PhD degree,  supervised by <a target="blank" href="http://dtv.ee.tsinghua.edu.cn/indexe.htm">Prof. Jian Song</a>, in electronic engineering in Tsinghua University in 2017 with the highest honor. From 2010 to 2011, he was a visiting scholar in Dept. Electronic and Communications Engineering, City University of Hong Kong. Currently he is a senior research engineer in Research Dept. Network Technologies, Huawei Technologies Co. Ltd.</p>
+<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012, and the PhD degree,  supervised by <a target="blank" href="http://dtv.ee.tsinghua.edu.cn/indexe.htm">Prof. Jian Song</a> (IEEE Fellow, ITU 6A Group Deputy Leader), in electronic engineering in Tsinghua University in 2017 with the highest honor. From 2010 to 2011, he was a visiting scholar in Dept. Electronic and Communications Engineering, City University of Hong Kong. He served as a senior research engineer in Research Dept. Network Technologies, Huawei Technologies Co. Ltd, from 2017 to 2018. Currently, he is an assistant professor in School of Information Science and Technology, Xiamen University</p>
 			   
-<p>Sicong Liu has published over 35 journal and conference research papers. He owns 7 Chinese invention patents. He is one of the core members that draft the Broadband Power Line Communications Standard in China. He has won the National Graduate Fellowship Award twice in 2014 and 2016, the Outstanding Doctoral Dissertation Award of Tsinghua University, the Outstanding PhD Graduate Award of Tsinghua University, and the Outstanding Graduate Award of Beijing City. He is a reviewer of IEEE Transactions on Signal Processing, IEEE Transactions on Communications, IEEE Transactions on Broadcasting, IEEE Transactions on Vehicular Technology and IEEE Transactions on Power Delivery. He is on the Editorial Board of the Future Internet Journal Special Issue on Massive MIMO Communication and Networking Systems. He served as a Technical Program Committee Member of the International Telecommunication Networks and Applications Conference (ITNAC) and Data Intensive Computing and Communications (DICC) 2017. He is a member of IEEE.</p>
+<p>Sicong Liu has published over 36 journal and conference research papers. He owns 7 Chinese invention patents. He is one of the core members that draft the Broadband Power Line Communications Standard in China. He has won the National Graduate Fellowship Award twice in 2014 and 2016, the Outstanding Doctoral Dissertation Award of Tsinghua University, the Outstanding PhD Graduate Award of Tsinghua University, and the Outstanding Graduate Award of Beijing City. He is a reviewer of IEEE Transactions on Signal Processing, IEEE Transactions on Communications, IEEE Transactions on Broadcasting, IEEE Transactions on Vehicular Technology and IEEE Transactions on Power Delivery. He is on the Editorial Board of the Future Internet Journal Special Issue on Massive MIMO Communication and Networking Systems. He served as a Technical Program Committee Member of the International Telecommunication Networks and Applications Conference (ITNAC) and Data Intensive Computing and Communications (DICC) 2017. He is a member of IEEE.</p>
 <p>His research interests lie in sparse signal processing, interference mitigation, cross-layer resource allocation and optimization, 5G emerging technologies, and their applications in the field of wireless communications, broadband multimedia transmission, smart grid communications, and power line and visible light communications. </p>
 
 			<h3>Education and Research Experiences</h3>
-			<p><b>Jul.2017-Present</b> &nbsp;&nbsp; Senior Research Engineer, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
+			<p><b>Mar. 2018 - Present</b> &nbsp;&nbsp; Assistant Professor, School of Information Science and Technology, Xiamen University</p>
+			<p><b>Jul.2017-Jan. 2018</b> &nbsp;&nbsp; Senior Research Engineer, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
 			<p><b>Aug.2012-Jul.2017</b> &nbsp;&nbsp;Ph.D., Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
 			<p><b>Aug.2010-Jan.2011</b> &nbsp;Visiting Scholar, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
 			<p><b>Aug.2008-Jul.2012</b> &nbsp;Bachelor, Department of Electronic Engineering, Tsinghua University</p>
@@ -85,6 +86,8 @@
 		<p>&bull; <b>Sicong Liu</b>, Fang Yang, Chao Zhang, Jian Song, "<a target="blank" href="http://search.ieice.org/bin/summary.php?id=e98-a_3_870&amp;year=2015">Narrowband interference mitigation based on compressive sensing for OFDM systems</a>”, <i>IEICE Transactions on Fundamentals</i>, vol. E98-A, no. 3, pp. 870–873, March 2015.</p>
 
 		<p>&bull; Tengjiao Wang, <b>Sicong Liu</b>, Fang Yang, Jintao Wang, Jian Song, “<a target="blank" href="http://ieeexplore.ieee.org/document/8057263/">Generalized Spatial Modulation Based Multi-User and Signal Detection Scheme for Terrestrial Return Channel with NOMA</a>”, accepted by <i>IEEE Transactions on Broadcasting</i>, Aug. 2017.
+		<p>&bull; Xu Ma, Fang Yang, <b>Sicong Liu</b>, Jian Song and Zhu Han, “<a target="blank" href="http://ieeexplore.ieee.org/document/7913633/">Design and Optimizationon Training Sequence for mmWave Communications: A New Approach for Sparse Channel Estimation in Massive MIMO</a>", in IEEE Journal on Selected Areas in Communications, vol. 35, no. 7, pp. 1486-1497, Apr. 2017.</p>
+<p>&bull; Xu Ma, Fang Yang, <b>Sicong Liu</b>, Jian Song, "Channel Estimation for Wideband Underwater Visible Light Communication: A Compressive Sensing Perspective", accepted by <i>Optics Express</i>, Dec. 2017.</p>
 
 		<p>&bull; Wenbo Ding, Fang Yang, <b>Sicong Liu</b>, Xianbin Wang, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7175052">Non-Orthogonal Time-Frequency Training Sequence Based CSI Acquisition for MIMO Systems</a>," <i>IEEE Transactions on Vehicular Technologies</i>, vol. 65, no. 7, pp. 5714-5719, July 2016.</p>
 		<p>&bull; Wenbo Ding, Fang Yang, <b>Sicong Liu</b>, and Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=7225354">Approach to suppress out-of-band emission for dual pseudo noise padded time-domain synchronous-orthogonal frequency division multiplexing systems</a>," <i>IET Communications</i>, vol. 9, no. 13, pp. 1606-1614, Sep. 2015.</p>
@@ -156,7 +159,7 @@
 <br>
 <h3></h3>
 	<div class="footer">
-		Last updatd Sep. 2017 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Mar. 2018 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
